update about section

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  background-color: #262B30;
+  background-color: #0f1e2c;
 }
 
 :root {
@@ -18,3 +18,14 @@ body {
   @apply text-slate-400 hover:text-slate-200 duration-200;
 }
 
+.about_bold_importance {
+  @apply text-slate-200 hover:text-blue-300 duration-300 font-semibold;
+}
+
+.app_module_format {
+  @apply mx-6 pb-24;
+}
+
+.header {
+  @apply text-slate-200 font-semibold text-sm mb-10 uppercase;
+}
