--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,10 @@ body {
   @apply text-slate-200 hover:text-blue-300 duration-300 font-semibold;
 }
 
+.skill_theme {
+  @apply text-blue-300 bg-blue-300/10 px-3 py-1.5 rounded-full text-xs font-medium mr-1.5 mt-2;
+}
+
 .app_module_format {
   @apply mx-6 pb-24;
 }
