setup navbar and routing

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,23 @@ body {
   background-color: #0f1e2c;
 }
 
+/* Highlight Text */
+::-moz-selection {
+  @apply bg-blue-300;
+}
+::-webkit-selection {
+  @apply bg-blue-300;
+}
+::selection {
+  @apply bg-blue-300;
+}
+
+/* Scroll Bar */
+::-webkit-scrollbar {
+  display: none;
+}
+
+/* Font */
 :root {
   font-family: Inter, sans-serif;
   font-feature-settings: 'liga' 1, 'calt' 1; /* fix for Chrome */
@@ -14,6 +31,7 @@ body {
   :root { font-family: InterVariable, sans-serif; }
 }
 
+/* Classes */
 .me_social_media_icons {
   @apply text-slate-400 hover:text-slate-200 duration-200;
 }
@@ -32,4 +50,8 @@ body {
 
 .header {
   @apply text-slate-200 font-semibold text-sm mb-10 uppercase;
+}
+
+.built_highlight{
+  @apply font-medium text-slate-400 hover:text-blue-300 duration-300;
 }
